Added Groups To Routing

--- a/go.config.yaml
+++ b/go.config.yaml
@@ -2,5 +2,6 @@ PORT: :8000
 
 ROUTES:
   MAIL:
-    BASIC: /api/mail/basic
-    HTTP: /api/mail/html
+    COMMON: /api/mail
+    BASIC: /basic
+    HTML: /html
